# fly2p

./: .gitignore  fly2p_test_environment.yml  pyproject.toml  pyprojectbackup.toml
fly2p/scripts/: BU_RFMappingMotion.ipynb  EB_processing.ipynb  imaging_preprocessing_new.ipynb
fly2p/viz/: viz.py
