[project]
authors = [{name = "AishaHamid201", email = "148481215+AishaHamid201@users.noreply.github.com"}]
name = "fly2p"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = ["scanimage-tiff-reader>=1.4.1.4,<2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
fly2p = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
napari = ">=0.6.3,<0.7"
ipywidgets = ">=8.1.7,<9"
matplotlib = ">=3.10.5,<4"
xarray = ">=2025.7.1,<2026"
qt = ">=5.15.15,<6"
pyqt = ">=5.15.11,<6"
